# PyStockMarketGame

./: .gitignore  README.md  README.txt  cleverCloudPostgreSQL.py  databaseSetup.sql  pyproject.toml  requirements.txt
BackEnd/: .gitignore  Dockerfile  README.md  requirements.txt  setup.py  swagger.yaml  test-requirements.txt
BackEnd/swagger_server/: __main__.py  encoder.py  util.py
BackEnd/swagger_server/controllers/: __init__.py  portfolio_controller.py  staticglobaldb.py  stock_controller.py  user_controller.py
BackEnd/swagger_server/models/: __init__.py  api_error.py  auth_key.py  base_model_.py  body.py  login_user.py  portfolio_position.py  portfolio_value.py  settings.py  stock_description.py  stock_financials.py  stock_info.py  stock_search_result.py  stock_sustainability.py  stock_value.py  transaction.py  transaction_prepare.py  user.py  user_prepare_login.py
BackEnd/swagger_server/services/: auth_service.py  db_service.py  finance_data.py  schedule_service.py  testAlgo.py  trading_service.py
BackEnd/swagger_server/swagger/: swagger.yaml
BackEnd/swagger_server/test/: test_portfolio_controller.py  (+3 more)
FrontEnd/: boerse_page.py  chart_generator.py  depot_page.py  depot_table.py  html_table_generator.py  login_page.py  orchestrator.py  requests_server.py  requirements.txt  side_bar.py  st_rerun.py  stock_analysis_page.py  stock_screener_page.py  style.css  test.css  test.py  test_page.py
FrontEnd/css/: dark.css  light.css  style.css
FrontEnd/pages/: side_bar.py
FrontEnd/utilities/: chart_generator.py  html_table_generator.py  requests_server.py  utils.py
developmentFiles/: cleverCloudPostgreSQL.py  marketConnect.py
yFinance/: YTicker.py
(+17 files in other folders)
