[tool.poetry]
name = "pystockmarketgame"
version = "0.1.0"
description = "simple stock market game"
authors = ["Daniel, Jannik, Luca M., Luca W., Ben"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.7.0"
python_dateutil = "^2.8.1"
setuptools = "^50.3.2"
sqlalchemy = "^1.3.20"
bcrypt = "^3.2.0"
mysql-connector-python = "^8.0.22"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
